--- a/TC1_CristianZapata.ipynb
+++ b/TC1_CristianZapata.ipynb
@@ -156,7 +156,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "movielens (3.11.5)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
